cluster-cd/apps/base/home/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: &name home-assistant
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host hass.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  name: api
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: home-assistant-tls
